--- a/dc-website/src/styles/styles.scss
+++ b/dc-website/src/styles/styles.scss
@@ -28,10 +28,3 @@ a {
   color: $primary-color;
   text-decoration: none;
 }
-
-header {
-  position: fixed;
-  z-index: 2;
-  width: 100%;
-  padding: 1rem;
-}
